--- a/style.css
+++ b/style.css
@@ -89,3 +89,13 @@ header a:hover {
 #chaylon:hover {
     text-decoration: underline;
 }
+
+.contact a {
+    color: black;
+    text-decoration: none;
+    transition: all 0.2s ease;
+}
+
+.contact a:hover {
+    text-decoration: underline;
+}
